Worked on plotting in the overview and entered more data in the report

--- a/Intervar/templates/base.html
+++ b/Intervar/templates/base.html
@@ -9,6 +9,7 @@
 </script>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title></title>
   <link rel="stylesheet" href="/static/css/bootstrap.min.css">
   <style>
