--- a/Intervar/templates/overview.html
+++ b/Intervar/templates/overview.html
@@ -43,9 +43,6 @@
   }
   
   
-  
-  
-  
 </script>
 
 <div class="container">
@@ -90,9 +87,14 @@
   </tbody>
 </table>
 </div>
-
 </div>
-<div class="row"><hr></div>
+<div class="row">
+<div class=col-md-6>
+<h5>Table with some data</h5>
+{{ overview_table }}
+</div>
+</div>
+<hr>
 <div class="row">
  <div class="col-sm-1"></div>
  <div class="col-sm-8">
