--- a/Intervar/templates/showdb.html
+++ b/Intervar/templates/showdb.html
@@ -4,7 +4,9 @@
 <!-- Choose a row of a table and use some method on it. In this case, change background color. -->
 <script type=text/javascript>
   $(function() {
-    $('#comment').val('{{ patient_comment }}')
+    // fill comment if exists:
+    $('#comment').val('{{ patient_comment[0] | replace("\r\n", "\\n") }}')
+    $('#filtus_settings').html(' {{ patient_comment[1] | replace("\r\n", "\\n")    }}' )
     // hide ID col of table
     $('#variant_table td:nth-child(1),th:nth-child(1)').hide();
     // hide signed col of table
@@ -218,7 +220,7 @@ $('#variant_table tr').click(function () {
 <hr>
 <div class="row">
   <div class="col-sm-6" >
-    <h5>Comment regarding this interpretation/analysis</h5>
+    <h4>Comment regarding this interpretation/analysis:</h4>
     <form action="{{ url_for('showdb') }}/{{ pID }}" method=POST enctype="multipart/form-data">
       {{ iform.hidden_tag() }}
       <fieldset class="form-group">
@@ -227,8 +229,13 @@ $('#variant_table tr').click(function () {
       <fieldset class="form-group">
         {{ iform.submit(class="btn btn-primary") }}
       </fieldset>
+      </div>
+      <div class="col-sm-5">
+      <h4>Filtus settings:</h4>
+      {{ iform.filtus_settings(class="form-control", placeholder="This should fill with settings info if a comment is already present") }}
+      </div>
     </form>
-  </div>
+  
 </div>
 <div class="row"><hr></div>
 <div class="row">
