--- a/Intervar/templates/showdb.html
+++ b/Intervar/templates/showdb.html
@@ -9,6 +9,8 @@
     $('#filtus_settings').html(' {{ patient_comment[1] | replace("\r\n", "\\n")    }}' )
     // hide ID col of table
     $('#variant_table td:nth-child(1),th:nth-child(1)').hide();
+    
+    
     // hide signed col of table
     $('#variant_table td:nth-child(14),th:nth-child(14)').hide();
     //tooltip on classes form selector
@@ -148,6 +150,7 @@ $('#variant_table tr').click(function () {
     $('#AGVDclass').text(data.AGVGDclass)
     $('#SIFTPrediction').text(data.SIFTprediction)
     $('#TASTERprediction').text(data.TASTERprediction)
+    $('#pubs').html(data.publications)
   });
   console.log("test")
   //$('.variant_info').html(chrom + " " + start + " " + stop);
@@ -155,12 +158,8 @@ $('#variant_table tr').click(function () {
   $('#varid').val(String(chrom)+'|'+String(start)+'|'+String(stop)+'|'+String(ref)+'|'+String(alt))
   //alert(chr + "|"+ start+ "|"+stop+ "|"+ref+ "|"+alt)
 });
-
-
 });
 </script>
-
-
 <div class="container">
 	<div class="row">
    <div class="col-md-10">        
@@ -235,7 +234,6 @@ $('#variant_table tr').click(function () {
       {{ iform.filtus_settings(class="form-control", placeholder="This should fill with settings info if a comment is already present") }}
       </div>
     </form>
-  
 </div>
 <div class="row"><hr></div>
 <div class="row">
@@ -250,308 +248,15 @@ $('#variant_table tr').click(function () {
   <!-- Trigger the modal with a button -->
   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Enter variant</button>
   </div>
+  <!-- Modal:Enter variant -->
+  {% include 'enter_variant_modal.html' %}
   <!-- Modal -->
-  <div id="myModal" class="modal fade" role="dialog">
-   <div class="modal-dialog">
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-       <button type="button" class="close" data-dismiss="modal">&times;</button>
-       <h4 class="modal-title">Enter variant</h4>
-     </div>
-     <div class="modal-body">
-       <p>Fill inn variant identification and get data from Alamut</p>
-       <form action="{{ url_for('showdb') }}/{{ pID }}" method=POST enctype="multipart/form-data">
-        {{ form.hidden_tag() }}
-        <div class="row">
-          <div class="col-sm-6">
-            <fieldset class="form-group">
-             {{ form.chrom.label }}
-             {{ form.chrom(class="form-control") }}
-           </fieldset>
-         </div></div>
-         <div class="row">
-          <div class="col-sm-6">
-           <fieldset class="form-group">
-             {{ form.start.label }}
-             {{ form.start(class="form-control") }}
-           </fieldset>
-           <fieldset class="form-group">
-             {{ form.ref.label }}
-             {{ form.ref(class="form-control") }}
-           </fieldset>
-           <fieldset class="form-group">
-             {{ form.zyg.label }}
-             {{ form.zyg(class="form-control") }}
-           </fieldset>
-         </div>
-         <div class="col-sm-6">
-           <fieldset class="form-group">
-             {{ form.stop.label }}
-             {{ form.stop(class="form-control") }}
-           </fieldset>
-           <fieldset class="form-group">
-             {{ form.alt.label }}
-             {{ form.alt(class="form-control") }}
-           </fieldset>       
-           <fieldset class="form-group">
-             {{ form.denovo.label }}
-             {{ form.denovo(class="form-control") }}
-           </fieldset>
-         </div>
-       </div>
-       <div class="row">
-         <div class="col-sm-3">
-           <fieldset class="form-group">          
-             {{ form.submit(class="btn btn-primary") }}
-           </fieldset>
-         </form>
-       </div>
-       <div class="col-sm-2">
-         <button id="get_alamut" type="button" class="btn btn-default">Get Alamut</button>
-         
-       </div>
-     </div>
-   </div>
-
-   <div class="modal-footer">
-     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-   </div>
- </div>
-</div>
-</div>
-<!-- Modal -->
-<div id="pID_Modal" class="modal fade" role="dialog">
-  <div class="modal-dialog modal-sm">
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Edit info for sample: {{ pID }}</h4>
-      </div>
-      <div class="modal-body">
-        <form action="{{ url_for('showdb') }}/{{ pID }}" method=POST enctype="multipart/form-data">
-          {{ pform.hidden_tag() }}
-          <fieldset class="form-group">
-            {{ pform.sex.label }}
-            {{ pform.sex(class="form-control") }}
-          </fieldset>
-          <fieldset class="form-group">
-            {{ pform.panel.label }}
-            {{ pform.panel(class="form-control") }}
-          </fieldset>
-          <fieldset class="form-group">
-            {{ pform.clinInfo.label }}
-            {{ pform.clinInfo(class="form-control") }}
-          </fieldset>
-          <fieldset class="form-group">
-            {{ pform.dis_category.label }}
-            {{ pform.dis_category(class="form-control") }}
-          </fieldset>
-          <fieldset class="form-group">
-            {{ pform.familyID.label }}
-            {{ pform.familyID(class="form-control") }}
-          </fieldset>
-          <fieldset class="form-group">
-            <div class="col-sm-10">
-              {{ pform.submit(class="btn btn-primary") }}
-            </div>
-          </fieldset>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Modal -->
-<div id="Interp_Modal" class="modal fade" role="dialog">
-  <div class="modal-dialog modal-lg">
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Edit info for the variant in sample: {{ pID }}</h4>
-      </div>
-      <div class="modal-body">
-
-        <div class="row">
-          <div class="col-sm-6">
-            <dl class="dl-horizontal">
-              <dt>Gene</dt>
-              <dd id="agene"></dd>
-              <dt>Transcript</dt>
-              <dd id="atrans"></dd>
-              <dt>gDNA</dt>
-              <dd id ="agDNA"></dd>
-              <dt>cDNA</dt>
-              <dd id ="acDNA"></dd>
-              <dt>Protein change</dt>
-              <dd id="aprot"></dd>
-              <dt>Type of mutation</dt>
-              <dd id="atype"></dd>
-              <dt>Variant location</dt>
-              <dd id="varLocation"></dd>
-              <dt>localSpliceEffect</dt>
-              <dd id="localSpliceEffect"></dd>
-              
-              <dt>Conserved orthos</dt>
-              <dd id="conservedOrthos"></dd>
-              
-              <dt>AGVDclass</dt>
-              <dd id="AGVDclass"></dd>
-              <dt>SIFTPrediction</dt>
-              <dd id="SIFTPrediction"></dd>
-              <dt>TASTERprediction</dt>
-              <dd id="TASTERprediction"></dd>
-              
-              
-              <dt>Protein domain 1</dt>
-              <dd id="aProtDom1"></dd>
-              <dt>Protein domain 2</dt>
-              <dd id="aProtDom2"></dd>
-              <dt>Protein domain 3</dt>
-              <dd id="aProtDom3"></dd>
-              <dt>HGMD ID</dt>
-              <dd id="hgmdId"></dd>
-              <dt>HGMD pheno</dt>
-              <dd id="hgmdPhenotype"></dd>
-              <dt>HGMD class</dt>
-              <dd id="hgmdSubCategory"></dd>
-              <dt>Clinvar phenotype</dt>
-              <dd id="clinVarPhenotypes"></dd>
-              <dt>Clinvarclinsign</dt>
-              <dd id="clinVarClinSignifs"></dd>
-            </dl>
-          </div>
-
-          <div class="col-sm-6">
-            <dl class="dl-horizontal">
-              <dt>AlamutClass</dt>
-              <dd id="alaclass">some text</dd>
-              <dt>Grantham score</dt>
-              <dd id="granthamDist"></dd>
-              <dt>dbSNP</dt>
-              <dd id="adbsnp"></dd>
-              <dt>rsClinicalSignificance</dt>
-              <dd id="rsClinicalSignificance"></dd>
-              <dt>1000 genomes(?)</dt>
-              <dd id="a1kg"></dd>
-              <dt>ESP (all)</dt>
-              <dd id="aESP"></dd>
-              <dt>espEAMAF</dt>
-              <dd id="espEAMAF"></dd>
-              <dt>Exac (all)</dt>
-              <dd id="aExac"></dd>
-              <dt>exacNFEFreq</dt>
-              <dd id="exacNFEFreq"></dd>
-              <dt>Exon</dt>
-              <dd id="Exon"></dd>
-              <dt>Zygosity</dt>
-              <dd id="zygo"></dd>
-              <dt>Seen @ MGM</dt>
-              <dd id="mgmseen"></dd>
-              <dt>Functional studies</dt>
-              <dd if="funcStud"></dd>
-            </dl>
-          </div>
-        </div>
-        <hr>
-        
-        <!-- -->
-        <h5 data-toggle="collapse" href="#publications_collapsible" aria-expanded="false" aria-controls="collapsePublications">
-          Add a publication
-        </h5>
-        <div class="collapse" id="publications_collapsible">
-          <div class="well">
-            <form action="{{ url_for('showdb') }}/{{ pID }}" method=POST enctype="multipart/form-data">
-              {{ pubForm.hidden_tag() }}
-              <fieldset class="form-group">
-                {{ pubForm.PMID(class="form-control", placeholder="PMID") }}
-              </fieldset>
-              <div class="input-group">
-                <fieldset class="form-group">
-                  {{ pubForm.reference(class="form-control", placeholder="Reference") }}
-                </fieldset>
-
-                <fieldset class="form-group">
-                  {{ pubForm.year(class="form-control", placeholder="Year") }}
-                </fieldset>
-              </div>
-              <fieldset class="form-group">
-                {{ pubForm.pcomment(class="form-control", placeholder="Comments/info") }}
-              </fieldset>
-              <fieldset class="form-group">
-                {{ pubForm.pub2varID(class="form-control") }}
-              </fieldset>
-              <fieldset class="form-group">
-                {{ pubForm.submit(class="btn btn-primary") }}
-              </fieldset>
-            </form>
-            <!-- <input class="btn btn-primary" id="submitcDNARequest" name="cDNAsubmit" type="submit" value="submit"> -->
-          </div>
-        </div>
-        
-        <!-- -->
-        <h5 data-toggle="collapse" href="#cDNARequest_collapsible" aria-expanded="false" aria-controls="collapseExample">
-          Alamut request 
-        </h5>
-        <div class="collapse" id="cDNARequest_collapsible">
-          <div class="well">
-            <input class="form-control" id="cDNARequest" name="cDNARequest" placeholder="NM_12341.4:c.234C>G" type="text" value="">
-            <br>
-            <input class="btn btn-primary" id="submitcDNARequest" name="cDNAsubmit" type="submit" value="submit">
-          </div>
-        </div>
-        
-        <hr>
-        <!-- -->
-
-        <h5>Comments regarding this specific variant?</h5>
-        <!-- -->
-        <form action="{{ url_for('showdb') }}/{{ pID }}" method=POST enctype="multipart/form-data">
-          {{ varIntForm.hidden_tag() }}
-          <fieldset class="form-group">
-
-            {{ varIntForm.comments(class="form-control", placeholder="This should fill with info is a comment is already present") }}
-          </fieldset>
-          <div class="row">
-            <div class="input-group">
-              
-              <div class="col-sm-6">
-                <fieldset class="form-group">
-                  {{ varIntForm.inhouse_class(class="form-control") }}
-                </fieldset>
-              </div>
-              <div class="col-sm-6">
-                <fieldset class="form-group">
-                  {{ varIntForm.acmg_class(class="form-control") }}
-                </fieldset>
-              </div>
-            </div>
-          </div>
-
-          <fieldset class="form-group">
-            {{ varIntForm.varid(class="form-control") }}
-          </fieldset>
-          <fieldset class="form-group">
-            {{ varIntForm.submit(class="btn btn-primary") }}
-          </fieldset>
-        </form>
-    
-        <!-- should contain two text inputs and a class selector along with a ACMGclass button-->
-      </div>
-      <div class="modal-footer">
-        <a class="btn btn-primary" role="button">
-          Delete variant
-        </a>
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
+  <!-- Modal:Patient info -->
+  {% include 'patient_info_modal.html' %}
+  <!-- Modal -->
+  <!-- Modal:Variant_interp_info -->
+  {% include 'variant_interp_modal.html' %}
+  <!-- Modal -->
 </div>
 </br></br></br>
 </div>
