--- a/Intervar/templates/enter_variant_modal.html
+++ b/Intervar/templates/enter_variant_modal.html
@@ -1,5 +1,5 @@
 <div id="myModal" class="modal fade" role="dialog">
-   <div class="modal-dialog">
+   <div class="modal-dialog modal-md">
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
@@ -11,14 +11,22 @@
        <form action="{{ url_for('showdb') }}/{{ pID }}" method=POST enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-5">
             <fieldset class="form-group">
              {{ form.chrom.label }}
              {{ form.chrom(class="form-control") }}
            </fieldset>
+         </div>
+            <div class="col-sm-5">
+            <fieldset class="form-group">
+            
+            
+             {{ form.combo.label }}
+             {{ form.combo(class="form-control") }}
+           </fieldset>
          </div></div>
          <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-5">
            <fieldset class="form-group">
              {{ form.start.label }}
              {{ form.start(class="form-control") }}
@@ -32,7 +40,7 @@
              {{ form.zyg(class="form-control") }}
            </fieldset>
          </div>
-         <div class="col-sm-6">
+         <div class="col-sm-5">
            <fieldset class="form-group">
              {{ form.stop.label }}
              {{ form.stop(class="form-control") }}
@@ -56,11 +64,9 @@
        </div>
        <div class="col-sm-2">
          <button id="get_alamut" type="button" class="btn btn-default">Get Alamut</button>
-         
        </div>
      </div>
    </div>
-
    <div class="modal-footer">
      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
    </div>
