--- a/Intervar/templates/base.html
+++ b/Intervar/templates/base.html
@@ -4,6 +4,7 @@
 <script type="text/javascript" src="/static/js/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/jquery.autosize.min.js"></script>
 <script type="text/javascript">
   var $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
 </script>
